fix: increase internal spacing in desktop screen size articles

--- a/src/styles.css
+++ b/src/styles.css
@@ -216,6 +216,10 @@ main p {
   line-height: 28px;
 }
 
+main article p {
+  margin: 20px auto;
+}
+
 main section {
   border-bottom: 2px solid #DFDFDF;
   margin: auto;
@@ -310,7 +314,8 @@ main section {
 }
 
 .customer-register input {
-  height: 30px;
+  height: 50px;
+  width: 200px;
 }
 
 .customer-register input, a {
